# ComplexPy

./: .coveragerc  .gitignore  .mailmap  .travis.yml  CONTRIBUTING.md  EmergenceComplexityMeasuresComparison.odt  LICENSE  Makefile  README.md  appveyor.yml  pyproject.toml  setup.py
complex_py/: .coverage  __init__.py  complex_py.py  testing_oct2py.py  version.py
complex_py/phiid/: A2b.mat  PhiIDFull.m  all_nets.mat  makeLaggedCovariance.m  statdata_random.m
complex_py/tests/: test_complex_py.py
data/: data_simulation.py  statdata_coup_errors1.m
data_simulation/data_simulation/: __init__.py
doc/: Makefile  api.rst  architecture.md  conf.py  docs.md  getting-started.md  index.rst  installation.md  theory.md
doc/how-to/: README.md
emergence_complexity_measures_comparison/: __init__.py  emergence_complexity_measures_comparison.py  testing_oct2py.py  version.py
emergence_complexity_measures_comparison/phiid/: PhiIDFull.m  PhiIDFullDiscrete.m  README.md  TwoNodeExample.m  emergence_complexity_comparison.m  phiid_pid_comparison.py  statdata.asv  statdata.m  statdata_coup_errors1.m  statdata_coup_errors2.m
emergence_complexity_measures_comparison/tests/: test_emergence_complexity_measures_comparison.py
scripts/: Figure1.ipynb  complex_py_analysis.ipynb  complex_py_analysis.py  complexpy_analysis.ipynb  emergence_complexity_measures_analysis.py  emergence_complexity_measures_analysis_old.py  emergence_complexity_measures_analysis_old2.py  plot_emergence_heatmaps.py  plotting.py  plotting_demo.ipynb  plotting_phases.py  test.py
tests/: test_complexpy.py
(+56 files in other folders)
